As suggested by Stefan, 1) CompressorRegistry now handles all the logic mapping service providers & compressors 2)simplified yaml file